# todol

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
todol/: commands.py  functions.py  main.py  prompts.py  shellcompleter.py  todol_version.py  todol_viewer.py
todol/flags/: todol_path.py  todol_show.py  todol_upgrades.py  todol_version.py
todol/functionality/: commands.py  commands_list.py  functions.py  paths.py  prompts.py  shellcompleter.py
