[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "todol"
version = "0.1.6"
description = "A simple cli todo app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "prompt_toolkit>=3.0.52"
]

[project.scripts]
todol = "todol.main:main"
